Fixed overflowing text

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-.k{
-  color: #3a7bfd;
+*{
+  box-sizing: border-box;
 }
